--- a/css/style.css
+++ b/css/style.css
@@ -1351,6 +1351,16 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
     .doc-photo-marg {
         margin-top: -45px !important;
     }
+ .servces_overlay h4{
+        font-size: 12px;
+    }
+
+    .servces_overlay p{
+        font-size: 12px;
+    }
+    .butn2{
+        font-size: 10px;
+    }
 }
 
 @media screen and (max-width: 362px) {
@@ -1372,6 +1382,16 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
     }
     .doc-photo-marg {
         margin-top: -45px !important;
+    }
+ .servces_overlay h4{
+        font-size: 12px;
+    }
+
+    .servces_overlay p{
+        font-size: 12px;
+    }
+    .butn2{
+        font-size: 10px;
     }
 
 }
