--- a/css/style.css
+++ b/css/style.css
@@ -898,7 +898,8 @@ footer {
     background-size: cover;
 }
 
-.about_products .welcomediv p {
+.about_products .welcomediv p ,
+.header_products .welcomediv p {
     color: #666666;
     background-color: #E2F8EB;
     /* display: inline; */
@@ -1152,7 +1153,7 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
     width: 100%;
     height: 600px;
     background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(../images/baners/products_banner.jpg) no-repeat center fixed;
+    url(../images/servicies/bannerServeses.png) no-repeat center fixed;
     background-size: cover;
 
 }
@@ -1238,19 +1239,31 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
             height: 180px;
 
         }
-
+        .welcomediv  {
+            
+            text-align: center !important;
+            
+        }
         .welcomediv h1 {
             font-size: 30px;
+            text-align: center !important;
+
         }
 
         .welcomediv h3 {
             font-size: 25px;
+            text-align: center !important;
+
         }
 
         .welcomediv p {
             width: 100% !important;
-        }
+            text-align: center !important;
 
+        }
+        .Butn1contain{
+            text-align: center !important;
+        }
         /* ? ///////////////////////////////////// */
         .signupSection {
             height: 100% !important;
@@ -1351,7 +1364,7 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
     .doc-photo-marg {
         margin-top: -45px !important;
     }
- .servces_overlay h4{
+    .servces_overlay h4{
         font-size: 12px;
     }
 
@@ -1361,6 +1374,7 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
     .butn2{
         font-size: 10px;
     }
+    
 }
 
 @media screen and (max-width: 362px) {
@@ -1382,16 +1396,6 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
     }
     .doc-photo-marg {
         margin-top: -45px !important;
-    }
- .servces_overlay h4{
-        font-size: 12px;
-    }
-
-    .servces_overlay p{
-        font-size: 12px;
-    }
-    .butn2{
-        font-size: 10px;
     }
 
 }
