update in signup page

--- a/css/login.css
+++ b/css/login.css
@@ -103,11 +103,11 @@
 
 }
 
-.loginTap li a:focus{
+/* .loginTap li a:focus{
     background-color: #F7C04A !important;
 
 
-}
+} */
 
 .nav-tabs{
     /* border:none ; */
