--- a/css/style.css
+++ b/css/style.css
@@ -408,7 +408,7 @@ nav.sticky .butn1:hover {
 }
   
 .about-image{
-        background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7))
+        /* background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)) */
 }
 .about-inner{
     width: 100%;
